# pixelset

./: Cargo.toml  README.md
examples/: compression_demo.rs
src/: lib.rs
src/cache/: grow.rs  mod.rs  pixel_box.rs
src/color/: error.rs  from.rs  mod.rs
src/compression/: codec.rs  mod.rs  rectangle_set.rs  serde.rs  serialization.rs
src/compression/rectangle_set/: mod.rs  packing.rs  tests.rs
src/direction/: mod.rs
src/pixel/: mod.rs
src/polygon_set/: chain_code.rs  from_pixel_set.rs  mod.rs  polygon.rs  tests.rs  to_pixel_set.rs
src/rectangle_set/: mod.rs
src/set/: coloring.rs  compress.rs  iter.rs  mod.rs  new.rs  serialization_tests.rs
src/set/ops/: diagnostics.rs  image_ops.rs  list_ops.rs  mod.rs  set_ops.rs
src/shapes/: circle.rs  circle_outline.rs  ellipse.rs  ellipse_outline.rs  mod.rs  rectangle.rs  rectangle_outline.rs
tests/: compression.rs  invariants.rs  pixel_operations.rs  set_operations.rs  workflows.rs
