[package]
name = "pixelset"
description = "High-performance pixel set for efficient set operations"
license = "MIT"
repository = "https://github.com/Ersox/pixelset"
authors = ["Ersox"]
version = "0.2.1"
edition = "2024"

[dependencies]
image = "0.25.9"
radsort = "0.1.1"
rand = { version = "0.9.2", optional = true }

[features]
rand = ["dep:rand"]
