[package]
name = "pixelset"
description = "High-performance pixel set for efficient set operations"
license = "MIT"
repository = "https://github.com/Ersox/pixelset"
authors = ["Ersox"]
version = "0.6.2"
edition = "2024"

[dependencies]
image = "0.25.9"
radsort = "0.1.1"
rand = { version = "0.9.2", optional = true }
thiserror = "2.0.17"

[features]
rand = ["dep:rand"]
